--- a/src/html/header.html
+++ b/src/html/header.html
@@ -2,8 +2,8 @@
 		<div class="content">
 			<div class="login">
 				<a href="">欢迎光临寺库网</a>
-				<a href="">请登录</a>
-				<a href="">免费注册</a>
+				<a href="/ajax/project/src/html/login.html">请登录</a>
+				<a href="/ajax/project/src/html/register.html">免费注册</a>
 				<a href="">我的订单</a>
 				<a href="">客户服务</a>
 				<a href="">媒体聚焦</a>
@@ -34,6 +34,7 @@
 			<div class="nav1">
 				<a href="">全部奢品</a>
 				<div class="all">
+					
 					<dl class="dl1">
 						<dt>
 							<a href="">包袋</a>
@@ -128,6 +129,7 @@
 			</div>
 				
 				<div class="hnav">
+					<i class="hot"></i>
 					<a href="" class="nav2">首页</a>
 					<a href="" class="nav3">海外直邮</a>
 					<a href="" class="nav4">闪购sale</a>
