--- a/src/html/login.html
+++ b/src/html/login.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>注册</title>
-	<link rel="stylesheet" href="../css/login.css">
-	<script src="../js/require.js" data-main="../js/login.js"></script>
+	<title>登录</title>
+	<link rel="stylesheet" href="/ajax/project/src/css/login.css">
+	<script src="/ajax/project/src/js/require.js" data-main="/ajax/project/src/js/login.js"></script>
 </head>
 <body>
 	<header>
@@ -13,7 +13,7 @@
 			<ul>
 				<li><a href="">寺库app</a></li>
 				<li><a href="">收藏寺库</a></li>
-				<li><a href="">寺库首页</a></li>
+				<li><a href="/ajax/project/src/index.html">寺库首页</a></li>
 			</ul>
 		</div>
 	</header>
