--- a/src/html/register.html
+++ b/src/html/register.html
@@ -13,7 +13,7 @@
 			<ul>
 				<li><a href="">寺库app</a></li>
 				<li><a href="">收藏寺库</a></li>
-				<li><a href="">寺库首页</a></li>
+				<li><a href="/ajax/project/src/index.html">寺库首页</a></li>
 			</ul>
 		</div>
 	</header>
@@ -23,7 +23,7 @@
 				
 			</div>
 			<div class="login">
-				<h1>欢迎登录</h1>
+				<h1>请输入信息</h1>
 				<input type="text" placeholder="用户名" id="name"><br>
 				<input type="password" placeholder="密码" id="password">
 				<input type="password" placeholder="确认密码" id="password1"><br>
