--- a/src/html/header.html
+++ b/src/html/header.html
@@ -2,15 +2,15 @@
 		<div class="content">
 			<div class="login">
 				<a href="">欢迎光临寺库网</a>
-				<a href="">请登录</a>
-				<a href="">免费注册</a>
-				<a href="">我的订单</a>
+				<a href="html/login.html">请登录</a>
+				<a href="html/register.html">免费注册</a>
+				<a href="html/detail.html">我的订单</a>
 				<a href="">客户服务</a>
 				<a href="">媒体聚焦</a>
 				<a href="">购物车</a><i></i>
 			</div>
 			<div class="center">
-				<div class="logo"><a href=""></a></div>
+				<div class="logo"><a href="../index.html"></a></div>
 				<div class="search">
 					<div class="sear">
 						<input type="text" class="bor" placeholder="NIKE 雨果">
@@ -34,6 +34,7 @@
 			<div class="nav1">
 				<a href="">全部奢品</a>
 				<div class="all">
+					
 					<dl class="dl1">
 						<dt>
 							<a href="">包袋</a>
@@ -128,7 +129,8 @@
 			</div>
 				
 				<div class="hnav">
-					<a href="" class="nav2">首页</a>
+					<i class="hot"></i>
+					<a href="../index.html" class="nav2">首页</a>
 					<a href="" class="nav3">海外直邮</a>
 					<a href="" class="nav4">闪购sale</a>
 					<a href="" class="nav5">我拍我买</a>
