--- a/src/html/login.html
+++ b/src/html/login.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>注册</title>
+	<title>登录</title>
 	<link rel="stylesheet" href="../css/login.css">
 	<script src="../js/require.js" data-main="../js/login.js"></script>
 </head>
@@ -13,7 +13,7 @@
 			<ul>
 				<li><a href="">寺库app</a></li>
 				<li><a href="">收藏寺库</a></li>
-				<li><a href="">寺库首页</a></li>
+				<li><a href="../index.html">寺库首页</a></li>
 			</ul>
 		</div>
 	</header>
@@ -34,7 +34,7 @@
 					<a href=""><span class="xl"></span></a>
 				</div>
 				<div class="zhu">
-					<p>还不是寺库会员？<a href="">免费注册</a></p>
+					<p>还不是寺库会员？<a href="../html/register.html">免费注册</a></p>
 					<a href="">忘记密码</a>
 				</div>
 				
