--- a/src/html/header.html
+++ b/src/html/header.html
@@ -2,12 +2,14 @@
 		<div class="content">
 			<div class="login">
 				<a href="">欢迎光临寺库网</a>
-				<a href="html/login.html">请登录</a>
-				<a href="html/register.html">免费注册</a>
-				<a href="html/detail.html">我的订单</a>
+				<a href="html/login.html" class="lin">请登录</a>
+				<a href="#" class="lin1"></a>
+				<a href="html/register.html" class="res">免费注册</a>
+				<a href="index.html" class="res1"></a>	
+				<a href="html/car.html">我的订单</a>
 				<a href="">客户服务</a>
 				<a href="">媒体聚焦</a>
-				<a href="">购物车</a><i></i>
+				
 			</div>
 			<div class="center">
 				<div class="logo"><a href="../index.html"></a></div>
@@ -136,8 +138,8 @@
 					<a href="" class="nav5">我拍我买</a>
 					<a href="" class="nav6">品牌旗舰店</a>
 					<a href="" class="nav7">中国精品</a>
-					<a href="" class="nav8">男士</a>
-					<a href="" class="nav9">女士</a>
+					<a href="html/goodslist.html" class="nav8">数码</a>
+					<a href="" class="nav9">奢侈品</a>
 					<a href="" class="nav10">豪车</a>
 				</div>
 				
