--- a/src/index.html
+++ b/src/index.html
@@ -13,13 +13,16 @@
 	<div class="box"></div>
 	<section>
 		<div class="contant">
+			<a href="html/car.html" class="car" id="end"><img src="img/car1.png" alt="">
+			<span class="count">0</span>
+			</a>
 			<!-- <img src="img/shouyebig.png" alt=""> -->
 			<div class="main1">
 				<div class="top">
 					<img src="img/shouyej1.png" alt="">
 				</div>
 				<ul>
-					<li class="l1"><a href=""><img src="img/shouye1.jpg" alt=""></a>
+					<li class="l1"><a href="html/detail.html"><img src="img/shouye1.jpg" alt=""></a>
 						
 					</li>
 					<li class="l2"><a href=""><img src="img/shouye2.png" alt=""></a>
