--- a/src/html/car.html
+++ b/src/html/car.html
@@ -4,11 +4,11 @@
 	<meta charset="UTF-8">
 	<title>我的购物车</title>
 	<link rel="stylesheet" href="../css/car.css">
-	<script src="../js/require.js" data-main="../js/login.js"></script>
+	<script src="../js/require.js" data-main="../js/car.js"></script>
 </head>
 <body>
 	<header>
-		<i></i>
+		<a href="../index.html"><i></i></a>
 		<div class="right">
 			<img src="../img/gwc1.jpg" alt="">
 		</div>
@@ -25,14 +25,76 @@
 					<span class="sum">小计总价</span>
 					<span class="cao">操作</span>
 				</div>
-				<ul>
-					<li class="gcheck"><img src="../img/logo.png" alt=""></li>
-					<li class="gname"><img src="../img/logo.png" alt=""></li>
-					<li class="gprice"></li>
-					<li class="gcount"></li>
-					<li class="gsum"></li>
-					<li class="gcao"></li>
+		<!-- 		<ul>
+					<li ><input type="checkbox" class="gcheck"></li>
+					<li class="gname">
+						<div class="pic">
+							<img src="../img/logo.png" alt="">
+						</div>
+						<p class="txt">	
+								CHANEL 香奈儿 女士金色双C LOGO耳环 
+								CHANEL 香奈儿 女士金色双C LOGO耳环 
+								CHANEL 香奈儿 女士金色双C LOGO耳环 
+							</p>
+					</li>
+					<li>
+						<p class="gprice">￥13434
+						</p></li>
+					<li>
+						<span class="cut a">-</span>
+						<input type="text" value="2" class="gcount a">
+						<span class="add a">+</span>
+					</li>
+					<li class="gsum">
+						<p class="gsum">￥13434
+						</p>
+					</li>
+					<li class="gcao">
+						<p class="gcao">
+							<a href="">删除</a>
+						</p>
+					</li>
 				</ul>
+						<ul>
+					<li ><input type="checkbox" class="gcheck"></li>
+					<li class="gname">
+						<div class="pic">
+							<img src="../img/logo.png" alt="">
+						</div>
+						<p class="txt">	
+								CHANEL 香奈儿 女士金色双C LOGO耳环 
+								CHANEL 香奈儿 女士金色双C LOGO耳环 
+								CHANEL 香奈儿 女士金色双C LOGO耳环 
+							</p>
+					</li>
+					<li>
+						<p class="gprice">￥13434
+						</p></li>
+					<li>
+						<span class="cut a">-</span>
+						<input type="text" value="2" class="gcount a">
+						<span class="add a">+</span>
+					</li>
+					<li class="gsum">
+						<p class="gsum">￥13434
+						</p>
+					</li>
+					<li class="gcao">
+						<p class="gcao">
+							<a href="">删除</a>
+						</p>
+					</li>
+				</ul> -->
+			</div>
+			<div class="b">
+				<div class="cut">
+					<a href="" class="shan">
+					<span class="tu"></span>删除选中商品</a>
+				</div>
+				<div class="total">总价：<span class="totalprice">0</span>
+				</div>
+				<div class="ti">立即结算</div>
+				<div class="shouye"><a href="../index.html">继续购物</a></div>
 			</div>
 		</div>
 	</section>
