--- a/src/html/detail.html
+++ b/src/html/detail.html
@@ -11,17 +11,21 @@
 	<header></header>
 	<section>
 		<div class="content">
+			<a href="car.html" class="car" id="end"><img src="../img/car1.png" alt="">
+			<span class="count">0</span>
+			</a>
+			<div class="tips">加入购物车成功!</div>
 			<p class="p1">
 				<a href="../index.html">首页</a>>
 				<a href="">3C电器</a>>
 				<a href="">数码</a>>
-				<a href="">笔记本</a>>
+				<a href="goodslist.html">笔记本</a>>
 				<a href="">小米(MI)Air 13.3英寸全金属超轻薄笔记本电脑(i5-6200U 8G 256G PCIE固态硬盘 940MX独显 FHD WIN10)银</a>
 			</p>
 			<div class="top">
 				<div class="left">
 					<div class="zoom">
-						<img src="../img/xiaomiSma1.jpg" data-big="../img/xiaomiBig1.jpg">
+						<img src="../img/xiaomiSma1.jpg" data-big="../img/xiaomiBig1.jpg" class="img">
 					</div>
 					<ul class="small-list">
 						<li>
@@ -47,12 +51,12 @@
 						<a href="">收藏商品</a>
 					</div>
 				</div>
-				<div class="right">
+				<div class="right" data-guid="g01">
 					<div class="t">
 						<h5>小米(MI)Air 13.3英寸全金属超轻薄笔记本电脑(i5-6200U 8G 256G PCIE固态硬盘 940MX独显 FHD WIN10)银</h5>
 					</div>
 					<div class="center">
-						<span class="jg1">寺库价：</span><span class="jg">￥5,999</span>
+						<span class="jg1">寺库价：</span><span class="jg">5999</span>
 						<br>
 						<span class="jb1">商品级别：</span><span class="jb">未使用</span>
 						<br>
@@ -70,11 +74,11 @@
 						<span>【13.3英寸】I5-6200U 8G 128G</span>
 						</div>
 						<div class="b2">
-						<span>购买数量：</span>
-							<span class="cut">-</span>
-							<input type="text" value="1">
+						<span class="gc">购买数量：</span>
+							<span class="cut a">-</span>
+							<input type="text" value="1" class="shu a">
 						
-							<span class="add">+</span>
+							<span class="add a">+</span>
 							<span class="qg">立即抢购</span>
 							<br>
 							<span class="gwc">加入购物车</span>
