--- a/src/html/register.html
+++ b/src/html/register.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 	<header>
-		<i></i>
+		<a href="../index.html"><i></i></a>
 		<div class="right">
 			<ul>
 				<li><a href="">寺库app</a></li>
